# malaysian-aviation-consumer-rag

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/manifests/: documents.csv  page_exclusions.csv  technical_manifest.csv
evaluation/: development_answer_failures_dev_v1.csv  development_answer_scores_dev_v1.csv  development_answer_scores_dev_v1.jsonl  development_answer_scores_dev_v2.jsonl  development_prompt_comparison.csv  generation_config_dev_v1.json  generation_config_dev_v2.json  generation_selection.json  locked_answer_run.json  locked_answer_scores_first_run.jsonl  locked_missing_page_ranks.csv  locked_questions.json  locked_questions.sha256  locked_retrieval_failures.csv  locked_retrieval_metrics.csv  locked_retrieval_rankings.jsonl  locked_retrieval_run.json  retrieval_config.json
notebooks/: 01_document_extraction_inspection.ipynb  02_chunking_and_retrieval_evaluation.ipynb  03_locked_evaluation_dataset_design.ipynb  04_locked_retrieval_evaluation.ipynb  05_answer_generation_and_evaluation.ipynb  06_locked_answer_generation_and_evaluation.ipynb
src/aviation_rag/: __init__.py  answer_evaluation.py  api.py  build_pages.py  checkpoint.py  gemini.py  generation.py  ingestion.py  main.py  retry.py  runtime.py  summarize_answers.py
tests/: test_answer_evaluation.py  test_api.py  test_build_pages.py  test_checkpoint.py  test_gemini.py  test_generation.py  test_ingestion.py  test_main.py  test_retry.py  test_runtime.py
