[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aviation-consumer-rag"
version = "0.1.0"
description = "Evaluated RAG assistant for Malaysian aviation consumer protection and service quality."
requires-python = ">=3.13,<3.14"
dependencies = [
    "sentence-transformers>=5.0,<6.0",
    "scikit-learn>=1.6,<2.0",
    "pandas>=3.0,<4.0",
    "PyMuPDF>=1.27,<2.0",
    "pdfplumber>=0.11,<0.12",
    "google-genai>=2.10,<3.0",
    "fastapi>=0.138,<0.139",
    "uvicorn[standard]>=0.49,<0.50",
]

[project.optional-dependencies]
dev = [
    "pypdf>=6.13,<7.0",
    "jupyterlab>=4.6,<5.0",
    "pytest>=9.1,<10.0",
    "python-dotenv>=1.2,<2.0",
    "httpx2>=2.5,<3.0",
]

[project.scripts]
aviation-rag-build-pages = "aviation_rag.build_pages:main"
aviation-rag-build-chunks = "aviation_rag.build_chunks:main"
aviation-rag-summarize-answers = "aviation_rag.summarize_answers:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"